tests/valid/functions/forward_decl.rs
/*
return: 3
*/

foo(): int;

main(): int{
    return foo();
}

foo(): int {
    return 3;
}