tests/invalid/functions/redefine_variable.rs
/*
fail: 1
*/

foo(x: int): int {
    x: int = 3;
}

main(): int {
    foo(1);
}